# bb84-qkd-sim

./: .gitignore  AI-Collaboration.md  README.md  pyproject.toml  requirements.txt
.github/workflows/: test.yml
bb84_sim/: __init__.py  alice.py  bob.py  eve.py  protocol.py  utils.py
docs/: physics_background.md
examples/: run_simulation.py
tests/: test_protocol.py  test_qber.py
