[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bb84-qkd-sim"
version = "1.0.0"
description = "BB84 量子密钥分发（QKD）协议的全链路基础仿真"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "matplotlib>=3.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.setuptools.packages.find]
include = ["bb84_sim*"]
